--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <div id="articleList"></div>
 
             <div id="articleImage">
-              <img
+              <!-- <img
                 src="https://cdn.vox-cdn.com/thumbor/YT2avJIUT9RCMlerOItGNuZpYLA=/23x0:978x500/fit-in/1200x630/cdn.vox-cdn.com/uploads/chorus_asset/file/19289055/Blogpost_earbuds.max_1000x1000.png"
                 alt="Girl in a jacket"
                 style="width:300px;height:300px;"
-              />
+              /> -->
             </div>
           </div>
 
