flip image on click

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
             <!-- <h1>Left Nav</h1> -->
             <h1> </h1>
             <div class="leftLinks" id="link1">Headlines</div>
-            <div class="leftLinks" id="search">
+            <div class="leftLinks" id="search1">
               <form>
-                <input type="text" class="search" id="search" placeholder="Search" />
-                <input type="submit" name="search" value="seach">
+                <input type="text" class="search" id="search"  placeholder="Search" />
+                <!-- <input type="text" class="search" id="search" placeholder="Search" />
+                <input type="submit" name="search" value="seach"> -->
               </form> 
 
             </div>
