--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
           </footer>
         </div>
       </div>
+      <div id="hideForPrint">
+        <!-- <h1>News URWay</h1>
+        <h2>hide for print</h2> -->
+      </div>
     </center>
   </body>
 </html>
