--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
       <div id="parentContainer">
         <div id="column1">
           <nav id="leftNav">
-            <!-- <h1>Left Nav</h1> -->
-            <h1> </h1>
+            <h1></h1>
             <div class="leftLinks" id="link1">Headlines</div>
             <div class="leftLinks" id="search1">
               <form>
-                <input type="text" class="search" id="search"  placeholder="Search" />
-                <!-- <input type="text" class="search" id="search" placeholder="Search" />
-                <input type="submit" name="search" value="seach"> -->
-              </form> 
-
+                <input
+                  type="text"
+                  class="search"
+                  id="search"
+                  placeholder="Search"
+                />
+              </form>
             </div>
             <div class="leftLinks" id="link3">
               <a href="https://generalassemb.ly" target="_blank"
@@ -38,7 +39,7 @@
             </div>
             <div id="searchV"></div>
 
-            </nav>
+            <div class="leftLinks" id="printPage">Print Page</div>
           </nav>
         </div>
         <div id="column2">
@@ -57,10 +58,7 @@
           </footer>
         </div>
       </div>
-      <div id="hideForPrint">
-        <!-- <h1>News URWay</h1>
-        <h2>hide for print</h2> -->
-      </div>
+      <div id="hideForPrint"></div>
     </center>
   </body>
 </html>
