--- a/practice/index.html
+++ b/practice/index.html
@@ -41,7 +41,7 @@
             <div id="searchV"></div>
             <div class="leftLinks" id="printPage">Print Page</div>
             <div id="favContainer" class="leftLinks">
-              <div>Favorates</div>
+              <div>Favorites</div>
               <br />
               <div
                 id="div1"
@@ -49,7 +49,13 @@
                 ondragover="allowDrop(event)"
               ></div>
               <div><p></p></div>
-              <div id="remove"><br />Remove</div>
+              <div
+                id="remove"
+                ondrop="dropRemove(event)"
+                ondragover="allowDrop(event)"
+              >
+                <br />Remove
+              </div>
             </div>
           </nav>
         </div>
