--- a/practice/index.html
+++ b/practice/index.html
@@ -39,7 +39,7 @@
               >
             </div>
             <div id="searchV"></div>
-            <div class="leftLinks" id="printPage">Print Page</div>
+            <div class="leftLinks" id="printPage">Printable Page</div>
             <div id="favContainer" class="leftLinks">
               <div>Favorites</div>
               <br />
