--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       charset="utf-8"
     ></script>
     <script src="app.js" charset="utf-8"></script>
+    <script src="dragdrop.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -38,8 +39,24 @@
               >
             </div>
             <div id="searchV"></div>
-
             <div class="leftLinks" id="printPage">Printable Page</div>
+            <div id="favContainer" class="leftLinks">
+              <div>Favorites</div>
+              <br />
+              <div
+                id="div1"
+                ondrop="drop(event)"
+                ondragover="allowDrop(event)"
+              ></div>
+              <div><p></p></div>
+              <div
+                id="remove"
+                ondrop="dropRemove(event)"
+                ondragover="allowDrop(event)"
+              >
+                <br />Remove
+              </div>
+            </div>
           </nav>
         </div>
         <div id="column2">
